--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MSGV-suffle",
+  "name": "MSGV-shuffle",
   "version": "1.0.0",
   "description": "'shuffles' your MGSV helicopter music",
   "private": true,
