--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "MSGV-shuffle",
+  "name": "MGSV-shuffle",
   "version": "1.0.0",
   "description": "'shuffles' your MGSV helicopter music",
   "private": true,
-  "main": "MGSV-shuffle.js",
+  "main": "src/index.js",
   "bin": {
-    "MGSV-shuffle": "./bin/MGSV-shuffle"
+    "MGSV-shuffle": "./bin/MGSV-shuffle-win32-ia32/MGSV-shuffle"
   },
-  "preferGlobal": true,
+  "electronVersion": "0.33.0",
   "scripts": {
-    "build": "nexe"
+    "start": "electron .",
+    "build": "electron-packager . %npm_package_name% --overwrite --prune --asar --out=bin --platform=win32 --arch=ia32 --icon=src/icon.ico --version=%npm_package_electronVersion% --app-version=%npm_package_version --ignore=node_modules/.bin"
   },
   "repository": {
     "type": "git",
@@ -20,16 +21,11 @@
   },
   "homepage": "https://github.com/tylergoodman/MGSV-shuffle",
   "devDependencies": {
-    "nexe": "^0.4.1"
+    "electron-packager": "^5.1.0",
+    "electron-prebuilt": "^0.33.0"
   },
-  "dependencies": {},
-  "nexe": {
-    "input": "./MGSV-shuffle.js",
-    "output": "./bin/MGSV-shuffle^$",
-    "runtime": {
-      "framework": "nodejs",
-      "version": "4.0.0",
-      "ignoreFlags": true
-    }
+  "dependencies": {
+    "material-ui": "^0.11.1",
+    "react": "^0.13.3"
   }
 }
